stop loader overlap

--- a/src/styles/Voter.module.css
+++ b/src/styles/Voter.module.css
@@ -1,7 +1,7 @@
 .voter {
   background: none;
   padding: 0;
-  border: 1px solid black;
+  border: 1px solid #8d8d8d;
   border-radius: 10%;
   background-color: #ffffff;
   box-shadow: 1px 1px 0px 1px #81b29a;
